force-app/main/default/objects/TW1_Material_Packing_Item__c/TW1_Material_Packing_Item__c.object-meta.xml
<CustomObject>
    <label>Material Packing Item</label>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>Material Packing Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Material Packing Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>