force-app/main/default/objects/TW1_Material_Packing_Item__c/fields/TW1_Content__c.field-meta.xml
<CustomField>
    <fullName>TW1_Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>