force-app/main/default/objects/TW1_Material_Packing_Item__c/fields/TW1_Material_Packing__c.field-meta.xml
<CustomField>
    <fullName>TW1_Material_Packing__c</fullName>
    <label>Material Packing</label>
    <referenceTo>TW1_Request__c</referenceTo>
    <relationshipLabel>Material Packing Items</relationshipLabel>
    <relationshipName>Material_Packing_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>